--- a/src/aura/ActionBuilder/ActionBuilder.css
+++ b/src/aura/ActionBuilder/ActionBuilder.css
@@ -225,6 +225,9 @@
 .THIS .rdna-back-button{
     margin-top: 30px;
 }
+.THIS .rdna-required{
+    color:Tomato;
+}
 /*.THIS .slds-dropdown-trigger.slds-is-open .slds-listbox__option.slds-has-focus {
 background-color: blue;
 }
