--- a/src/aura/ActionModal/ActionModal.css
+++ b/src/aura/ActionModal/ActionModal.css
@@ -5,7 +5,7 @@
     border: solid 1px #0066ff;
     background-color: #ffffff;
 }
-.THIS .rdna-modal-input{
+.THIS .slds-textarea{
     width: 610px !important;
     height: 134px !important;
     border-radius: 6px;
