--- a/src/aura/Pagination/Pagination.css
+++ b/src/aura/Pagination/Pagination.css
@@ -34,7 +34,7 @@
     height: 30px;
     border-radius: 6px;
     text-align: center !important;
-    
+    text-decoration-line: none !important;
 }
 
 .THIS .slds-button{
